#35 reflection deprecation